@@ -15,6 +15,8 @@ NEWS/ChangeLog for hydroPSO
                               unnecessary) titles when 'main' is too long
         o 'lhoat'           : -) 'fn' argument now can be any R function or a character. In the latter case, it can be "hydromod" or the name of a 
                                   valid R function. In previous versions of 'lhoat' only a character type was accepted (Thanks to Rui Esteves !)
+        o 'plot_NparOF'     : 'main' argument was disabled, in order to avoid confusing text when 'main is a long text
+
 0.3-0	19-Dec-2012
         o 'hydroPSO'    : -) parallel capable (OS-independent)
                              * new argument 'parallel' to define how to parallelise the evaluation of the objective function
